# Haskell_training

./: README.md  dockerfile  haskell.cabal  quicksort
app/: Main.hs
app/Basic/: HigherOrderFunctions.hs  Modules.hs  Recursion.hs  SyntaxInFunctions.hs
app/Basic/Module/: GeometryModule.hs
app/DataStructures/: BinaryTree.hs  Monoids.hs  PriorityQueue.hs  Search.hs
app/Tests/: Calculator.hs  CalculatorTests.hs  QuickSortTests.hs  Quicksort.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
