cabal-version:      2.4
name:               haskell
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             PiotrZak
maintainer:         piotrzak77@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable haskell
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   app
    default-language: Haskell2010



-- add test suite
Test-Suite test-Calculator
  type:                exitcode-stdio-1.0
  hs-source-dirs:      app/Tests
                       .
  default-language:    Haskell2010
  main-is:             CalculatorTests.hs
  other-modules:       Calculator
  build-depends:       base >=4.14 && <4.15, HUnit

-- add test suite
Test-Suite test-QuickSort
    type:                exitcode-stdio-1.0
    hs-source-dirs:      app/Tests
                         .
    default-language:    Haskell2010
    main-is:             QuickSortTests.hs
    other-modules:       Quicksort
    build-depends:       base >=4.14 && <4.15, HUnit
